2005-07-21  Jim Huang  <jserv@kaffe.org>

	* src/telnetcon.cpp:
	Adapt conditional compilation with USING_LINUX/USING_FREEBSD macro
	detected in autotools.

2005-07-21  Jim Huang  <jserv@kaffe.org>

	* src/notifier/api.h,
	src/notifier/impl.c:
	New files. Primitive lightweight popup notifier implementation.
	NOTE: The length of message body and window size have to be adjusted.

	* src/pcmanx_pure_gtk2.cpp,
	src/telnetcon.cpp,
	src/Makefile.am,
	configure.ac:
	Add popup notification support.

	* TODO: Updated.
	
2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp,
	src/telnetcon.h,
	src/stringutil.cpp,
	src/telnetview.cpp:
	Apply some patch files from pav@FreeBSD.org.

2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetview.cpp (CTelnetView::DoPasteFromClipboard):
	Add "Auto Wrap" on paste.

2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp (CTelnetCon::OnMainIdle):
	Little bug fix.

2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp (CMainFrame::OnURLEntryKillFocus):
	Little bug fix. We should reutrn FALSE in this handler.

2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp,
	src/emoticondlg.cpp,
	src/editfavdlg.cpp,
	src/view.cpp,
	src/prefdlg.cpp,
	src/sitedlg.cpp,
	src/mainframe.cpp,
	src/dialog.cpp,
	src/inputdialog.cpp,
	src/widget.cpp,
	src/listbox.cpp,
	src/telnetview.cpp,
	src/sitelistdlg.cpp,
	src/generalprefpage.cpp:
	Remove all C++ destructors in CWidget derived classes.
	All destruction of these classes should be done in OnDestroy() instead.

	* src/telnetcon.cpp:
	Improve multi-threading handling.

2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::~CTermView):
	Fix the bug in destructor.
	GdkCursor can be ref and unref correctly now.

	* src/mainframe.cpp (CMainFrame::NewCon):
	Rearrange the order of some operations to fix a serious bug which 
	causes frequent segmentation fault.
