@@ -63,8 +63,10 @@ CSite::CSite(string Name)
 	// Connect automatically when startup.
 	m_Startup = false;
 
+#ifdef USE_EXTERNAL
 	m_UseExternalSSH = false;
 	m_UseExternalTelnet = false;
+#endif
 
 	m_MenuItem = NULL;
 }
@@ -89,8 +91,10 @@ void CSite::SaveToFile(FILE *fo)
 	fprintf( fo, "CRLF=%d\n", m_CRLF );
 	fprintf( fo, "Startup=%d\n", m_Startup );
 
+#ifdef USE_EXTERNAL
 	fprintf( fo, "UseExternalSSH=%d\n", m_UseExternalSSH );
 	fprintf( fo, "UseExternalTelnet=%d\n", m_UseExternalTelnet );
+#endif
 
 	fprintf( fo, "PreLoginPrompt=%s\n", m_PreLoginPrompt.c_str() );
 	fprintf( fo, "PreLogin=%s\n", m_PreLogin.c_str() );
